fix spacing & padding on all page and fix form update antrean tambah loket

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -837,7 +837,7 @@ body {
 
 /* navbar */
 #side-nav {
-    border-bottom: 1px solid rgba(0,0,0,.2);
+    border-bottom: 1px solid rgba(0, 0, 0, .2);
 }
 
 .navbar-dashboard span {
@@ -895,7 +895,7 @@ body {
     top: 0;
     left: 0;
     width: 400px;
-    border-right: 1px solid rgba(0,0,0,.2);
+    border-right: 1px solid rgba(0, 0, 0, .2);
 }
 
 .sidebar-header {
@@ -965,7 +965,7 @@ body {
     position: absolute;
     left: 122px;
     top: 0;
-    transform: translate(-50% , -50%);
+    transform: translate(-50%, -50%);
     border-radius: 6px;
     height: 35px;
     width: 122px;
@@ -1384,7 +1384,7 @@ body {
     background-color: #FFFFFF;
     width: 100%;
     height: 80vh;
-    padding: 5%;
+    padding: 3%;
     border-radius: 30px;
     box-shadow: 0px 10px 16px 0px rgba(0, 0, 0, 0.25);
     overflow: auto;
@@ -3023,6 +3023,10 @@ hr.rounded {
     }
 
     /* halaman pilih loket */
+    .loket-lokasi {
+        padding: 3%;
+    }
+
     .tombol-ambil-antrian {
         font-size: 1rem;
     }
